RESOLVED FIXED86418
CSS3's vh attribute is not adjusting while browser resizes
https://bugs.webkit.org/show_bug.cgi?id=86418
Summary CSS3's vh attribute is not adjusting while browser resizes
James Kyle
Reported 2012-05-14 17:36:38 PDT
Tested on Google Chrome Canary (21.0.1136.0) New CSS3 values vh & vw (viewport height & width) implemented in a way that only adjust when resizing the browser horizontally not vertically. This needs further testing to prove its not just Chrome or JSfiddle.net causing the problem.
Attachments
Proposed patch (8.88 KB, patch)
2013-01-31 00:26 PST, Uday Kiran
no flags
Patch for landing (7.88 KB, patch)
2013-01-31 12:28 PST, Uday Kiran
no flags
Patch for landing (7.88 KB, patch)
2013-01-31 12:36 PST, Uday Kiran
no flags
Uday Kiran
Comment 1 2013-01-31 00:26:19 PST
Created attachment 185703 [details] Proposed patch
Antti Koivisto
Comment 2 2013-01-31 12:09:56 PST
Comment on attachment 185703 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=185703&action=review Looks good otherwise. > Source/WebCore/ChangeLog:24 > + (WebCore::RenderBoxModelObject::calculateFillTileSize): Fixed an error in > + initial implementation of vw/vh/vmin. Please file a separate bug for this. You should fix it in a separate patch with a test case.
Uday Kiran
Comment 3 2013-01-31 12:28:09 PST
Created attachment 185837 [details] Patch for landing
Uday Kiran
Comment 4 2013-01-31 12:36:05 PST
Created attachment 185839 [details] Patch for landing
Uday Kiran
Comment 5 2013-01-31 12:38:10 PST
(In reply to comment #4) > Created an attachment (id=185839) [details] > Patch for landing Used webkit-patch land-safely incorrectly, first time :) and missed reviewer's name.
WebKit Review Bot
Comment 6 2013-01-31 15:13:38 PST
Comment on attachment 185839 [details] Patch for landing Clearing flags on attachment: 185839 Committed r141492: <http://trac.webkit.org/changeset/141492>
WebKit Review Bot
Comment 7 2013-01-31 15:13:41 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.