CSS3's vh attribute is not adjusting while browser resizes https://bugs.webkit.org/show_bug.cgi?id=86418

Patch by Uday Kiran <udaykiran@motorola.com> on 2013-01-31
Reviewed by Antti Koivisto.

Source/WebCore:

Elements with viewport percentage units needs layout whenever
viewport size changes. Check for viewport percentage unit
was missing for height.

Test: css3/viewport-percentage-lengths/vh-resize.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::updateBlockChildDirtyBitsBeforeLayout):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::hasViewportPercentageLogicalHeight): Check if style
is specified in viewport percentage units.
(WebCore):
* rendering/RenderBox.h:
(RenderBox):
* rendering/RenderView.cpp:
(WebCore::RenderView::layout): Elements with viewport percentage units
needs relayout when viewport size changes.

LayoutTests:

Added test to check element with vh units gets resized when
viewport height is increased or decreased.

* css3/viewport-percentage-lengths/vh-resize-expected.html: Added.
* css3/viewport-percentage-lengths/vh-resize.html: Added.

Canonical link: https://commits.webkit.org/126759@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141492 268f45cc-cd09-0410-ab3c-d52691b4dbfc